Css Changes (Before Responsiveness)

--- a/index.html
+++ b/index.html
@@ -168,8 +168,223 @@
         </div>
 
     </section>
-   
-    
+    <!--Security Notes Section-->
+   <section class="security">
+    <div class="SecurityNoteLeft">
+        <div class="SecurityTextButton">
+            <p>Better Note Management</p>
+        </div>
+        <div class="SecuritySectionText">
+            <h1>
+                Your Notes <span>Security</span>  
+            </h1>
+            <p>Automatically syncs across all your devices. You can also access and write notes without internet connection.</p>
+            <div id="TextBlock">
+                <h2>
+                    Create And Save Your Notes With Multi-Media <span class="material-symbols-outlined">keyboard_arrow_down</span>
+                </h2>
+                <p>
+                    Images, videos, PDFs and audio files are supported. Create math expressions and diagrams directly from the app. Take photos with the mobile app and save them to a note.
+                </p>
+            </div>
+         </div>
+         <div class="ReadMoreBlock">
+            <div id="ReadMoreBlock-group">
+                <h2>Web Clipper Extension </h2>
+                <span  class="material-symbols-outlined">keyboard_arrow_down</span>
+            </div>
+            <div id="ReadMoreBlock-group">
+                <h2>Protect Your Note With Lock</h2>
+                <span  class="material-symbols-outlined">keyboard_arrow_down</span>
+            </div>
+        </div>
+        <a href="https://shorturl.at/vxvpr" target="_blank" class="Chrome">
+            <img src="./Assests/Chrome.svg" alt="Chrome">
+            <h2>|</h2>
+            <p>Available In The <br> <span>Chrome Web Store </span> </p>
+        </a>
+    </div>
+    <div class="SecurityNoteRight">
+        <img src="./Assests/SecuritySectionImage.svg" alt="Image">
+    </div>
+   </section>
+   <!--Dark Theme Section-->
+    <section class="darkTheme">
+        <div class="DarkThemeLeft">
+            <img src="./Assests/DarkThemeImage.svg" alt="Image">
+        </div>
+        <div class="DarkThemeRight">
+            <div class="DarkThemeText">
+                <p>Beautiful Themes</p>
+            </div>
+            <h1>
+                Focus More With <br>
+                <span>Dark Theme</span>
+            </h1>
+            <h6>
+                Apply Notero’s elegant themes to your taste. Dark themes work excellently for those who prefer distraction-free mode.
+            </h6>
+            <ul>
+                <li>Filtering notes using matched keywords</li>
+                <li> <span>8 Beautiful themes for you select</span></li>
+                <li>Save energy for your device</li>
+                <li>Easy to switch between light and dark mode</li>
+            </ul>
+            <button onclick="Discovery()" class="btn_discovery">
+                <p>Discovery Now</p>
+            </button>
+        </div>
+
+    </section>
+    <!--Popular App Section-->
+    <section class="PopularApp">
+        <div class="PopularAppTextButton" >
+            <p>One-Time Payment</p>
+        </div>
+        <h1>
+            Integration With <span>Popular Apps</span>
+        </h1>
+        <h2>Notero integrate with popular apps. Help you easy to connect and collaboration</h2>
+        <img src="./Assests/PopularAppImage.svg" alt="Image">
+    </section>
+    <!--PhoneImages Section-->
+    <section class="PhoneImages">
+        <img src="./Assests/3.svg" alt="Image">
+        <img src="./Assests/4(1).svg" alt="Image">
+        <img src="./Assests/HandPhoneImage.svg" alt="Image">
+        <img src="./Assests/1(1).svg" alt="Image">
+        <img src="./Assests/2(1).svg" alt="Image">
+    </section>
+    <!--Testimonial Section-->
+    <section class="Testimonial">
+        <div class="TestimonialLeft">
+            <div class="TestimonialTextButton" >
+                <h5>Testimonials</h5>
+            </div> 
+            <h1>Loved From <span>Customers</span> </h1>
+            <p>Notero loved from thoudsands customer worldwide and <br> get trusted from big companies.</p>
+            <div class="appicons_box">
+                <div class="app_group">
+                    <img id="first_image" src="./Assests/testi_s4_ic1.svg" alt="App Icon">
+                    <h1>2,5M+</h1>
+                    <p>Downloaded and <br> Installation</p>
+                </div>
+                <img id="LineImage" src="./Assests/Line 3.svg" alt="Line">
+                <div class="app_group">
+                    <img id="first_image" src="./Assests/testi_s4_ic2.svg" alt="App Icon">
+                    <h1>4.8/5</h1>
+                    <img src="./Assests/star.svg" alt="Stars">
+                    <p>Based on 1,258 reviews</p>
+                </div>           
+            </div>
+            <div class="testimonials_button">
+                <button onclick="SeeReview()" class="review_btn">
+                    <h3>See Reviews on app store</h3>
+                </button>
+                <div onclick="Playing()" class="promotion_btn">
+                        <img  src="./Assests/Ellipse 7.png" alt="Play">
+                        <p>View <br>Promotion</p>
+                </div>
+            </div>
+        </div>
+        <div class="TestimonialRight">
+            <div class="reviews-section">
+                <div class="review-group">
+                    <img src="./Assests/user4.svg" alt="User Image">
+                    <div class="review">
+                        <img src="./Assests/star.svg" alt="Review Stars">
+                        <h4>“You can even send emails to Evernote and gatherall of the things you need in a single place.”</h4>
+                        <h6>JURGEN K. / Senior Marketing At <span>Brator</span> </h6>
+                    </div>
+                </div>
+                <div style="transform: translateX(3vw);" class="review-group">
+                    <img src="./Assests/user5.svg" alt="User Image">
+                    <div class="review">
+                        <img src="./Assests/star.svg" alt="Review Stars">
+                        <h4>“Notero - 1st my choice for notes app. Awesome”</h4>
+                        <h6>FODEN P. / Director At <span> Ecoland Resort</span></h6>
+                    </div>
+                </div>
+                <div class="review-group">
+                    <img src="./Assests/user6.svg" alt="User Image">
+                    <div class="review">
+                        <img src="./Assests/star.svg" alt="Review Stars">
+                        <h4>“.This app is seriously good. It’s simple, clean anda real joy to use.”</h4>
+                        <h6>KERRY T. / Designer At <span>Teckzone Inc</span> </h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Social Section-->
+    <section class="social-section">
+        <div class="SocialTabButton">
+            <p>Notero Community</p>
+        </div>
+        <h1>Join Into <span>Our Hub</span></h1>
+        <div class="SocialIcons">
+            <div class="socialIcon">
+                <img src="./Assests/GitHub.svg" alt="GitHub Logo">
+                <h2>GitHub <br>
+                <span>Open Source & Commit Code</span></h2>
+            </div>
+            <div class="socialIcon">
+                <img src="./Assests/Twitter.svg" alt="Twitter Logo">
+                <h2>Tweeter <br>
+                <span>Latest News & Update</span></h2>
+            </div>
+            <div class="socialIcon">
+                <img src="./Assests/Telegram.svg" alt="Telegram Logo">
+                <h2>Telegram <br>
+                <span>Channel For Community </span></h2>
+            </div>
+        </div>
+
+    </section>
+    <!--Footer Section-->
+    <section class="footer">
+        <div class="FooterHeader">
+            <h1>Ready To <span>Download</span></h1>
+            <p>Discover your new favorite spaces, from Sao Paulo to Seoul. Download from App Store or Google Play.</p>
+        </div>
+        <div class="FooterDownloadButtons">
+            <div class="AppStore_btn">
+                <img src="./Assests/Apple Logo.png" alt="Apple Logo">
+                <span>|</span>
+                <p>Download App on app store</p>
+            </div>
+            <div class="PlayStore_btn">
+                <img src="./Assests/Google Play.svg" alt="GooglePlay Logo">
+                <span>|</span>
+                <p>Download App on Google play</p>
+            </div>
+        </div>
+        <div class="FooterBar">
+            <img src="./Assests/logo.svg" alt="Logo">
+            <ul>
+                <li>Home</li>
+                <li>Pages</li>
+                <li>Portfolio</li>
+                <li>Blog</li>
+                <li>Contact</li>
+            </ul>
+            <div class="Language">
+                <img src="./Assests/lang 1.svg" alt="Flag Image">
+                <div class="Lang-Eng">
+                    <p>English</p>
+                    <span class="material-symbols-outlined">
+                        keyboard_arrow_down
+                        </span>
+                </div>    
+            </div>
+        </div>
+        <img id="Footer_line" src="./Assests/Line 4.svg" alt="">
+        <div class="copyWrite">
+        <img src="./Assests/Copyright All Rights Reserved.svg" alt="CopyWrite Image">
+        <p>2023 copyrights by <span>ITech</span>  . All Rights Reserved.</p>
+        </div>
+
+    </section>
 
 </body>
 </html>
